--- a/template_A06.qmd
+++ b/template_A06.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Assignment 6"
 subtitle: "STAT 201"
-author: "YOUR NAME"
+author: "Selina Jiang"
 
 format:
   html:
@@ -48,7 +48,7 @@ To get full credit for this Question you must:
 
 ## Github Repo Link
 
-[https://your-github-repo-url](https://your-github-repo-url)
+[https://github.com/selinajiang75/Jiang_Selina_201_A06](https://github.com/selinajiang75/Jiang_Selina_201_A06)
 
 :::
 
@@ -56,7 +56,7 @@ To get full credit for this Question you must:
 
 ## Screenshot/image of RStudio
 
-![](filepath.png)
+![](GitHub Setup Screenshot.png)
 
 :::
 
