--- a/template_A06.qmd
+++ b/template_A06.qmd
@@ -290,6 +290,25 @@ Example: The number 312 would return 6 (3 + 1 + 2)
 Run your function with 935068.
 
 ```{r}
+# %% 10 gets the last digit because its the remainder
+# %/% 10 gets the remaining number after removing last digit (integer division)
+
+# function(935068) = 8 + function(935068 /%/ 10)
+# function(93506) = 6 + function(93506 /%/ 10)
+# ...
+# function(9) = 9
+
+sum_of_digits <- function(x){
+  # base case
+  if(x %/% 10 == 0){
+    return(x)
+  } else{ # recursive case
+    return((x %% 10)+ sum_of_digits(x %/% 10))
+  }
+}
+
+
+sum_of_digits(935068)
 
 ```
 
